
Table User {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  password String [not null]
  avatar String [not null]
  phone String [not null]
  role String [not null]
  templates Template [not null]
  blogPosts BlogPost [not null]
  comments Comment [not null]
  votes Vote [not null]
  reports Report [not null]
}

Table Template {
  id Int [pk, increment]
  title String [not null]
  explanation String [not null]
  code String [not null]
  language String [not null]
  tags String [not null]
  forked Boolean [not null, default: false]
  userId Int [not null]
  user User [not null]
  blogPosts BlogPost [not null]
}

Table BlogPost {
  id Int [pk, increment]
  title String [not null]
  description String [not null]
  tags String [not null]
  templates Template [not null]
  numUpvotes Int [not null, default: 0]
  numDownvotes Int [not null, default: 0]
  userId Int [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
  comments Comment [not null]
  votes Vote [not null]
  reports Report [not null]
  hidden Boolean [not null, default: false]
}

Table Comment {
  id Int [pk, increment]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  userId Int [not null]
  user User [not null]
  blogPostId Int [not null]
  blogPost BlogPost [not null]
  parentId Int
  parent Comment
  replies Comment [not null]
  numUpvotes Int [not null, default: 0]
  numDownvotes Int [not null, default: 0]
  votes Vote [not null]
  reports Report [not null]
  hidden Boolean [not null, default: false]
}

Table Vote {
  id Int [pk, increment]
  voteType String [not null]
  userId Int [not null]
  user User [not null]
  blogPostId Int
  blogPost BlogPost
  commentId Int
  comment Comment

  indexes {
    (userId, blogPostId) [unique]
    (userId, commentId) [unique]
  }
}

Table Report {
  id Int [pk, increment]
  reason String [not null]
  userId Int [not null]
  user User [not null]
  blogPostId Int
  blogPost BlogPost
  commentId Int
  comment Comment
}

Table BlogTemplates {
  blogpostsId Int [ref: > BlogPost.id]
  templatesId Int [ref: > Template.id]
}

Ref: Template.userId > User.id

Ref: BlogPost.userId > User.id

Ref: Comment.userId > User.id

Ref: Comment.blogPostId > BlogPost.id

Ref: Comment.parentId - Comment.id

Ref: Vote.userId > User.id

Ref: Vote.blogPostId > BlogPost.id

Ref: Vote.commentId > Comment.id

Ref: Report.userId > User.id

Ref: Report.blogPostId > BlogPost.id

Ref: Report.commentId > Comment.id